[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/boton.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/EmilysCandy-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 27
outline_size = 3
outline_color = Color( 0.0470588, 0.0235294, 0.0235294, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 27
outline_size = 3
outline_color = Color( 0.0313726, 0.027451, 0.027451, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 27
outline_size = 2
outline_color = Color( 0.286275, 0.027451, 0.027451, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 27
outline_size = 1
outline_color = Color( 0.0705882, 0.0627451, 0.0627451, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
outline_color = Color( 0.027451, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
margin_bottom = 35.0

[node name="Score" type="Label" parent="Control/HBoxContainer"]
margin_right = 248.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Tiempo" type="Label" parent="Control/HBoxContainer"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2

[node name="Mensajes" type="Label" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -17.5
margin_bottom = 17.5
custom_fonts/font = SubResource( 3 )
text = "Odi-oso
\"Origenes\""
align = 1
valign = 1

[node name="BotonInicio" type="TextureButton" parent="Control"]
margin_left = 29.0
margin_top = 560.0
margin_right = 208.0
margin_bottom = 649.0
texture_normal = ExtResource( 1 )
expand = true

[node name="MensajeInicio" type="Label" parent="Control/BotonInicio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -17.5
margin_right = 75.0
margin_bottom = 17.5
custom_fonts/font = SubResource( 4 )
text = "Iniciar Juego"

[node name="Tutorial" type="TextureButton" parent="Control"]
margin_left = 256.0
margin_top = 562.0
margin_right = 446.0
margin_bottom = 646.0
texture_normal = ExtResource( 1 )
expand = true

[node name="MensajeTutorial" type="Label" parent="Control/Tutorial"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -42.5
margin_bottom = 41.5
custom_fonts/font = SubResource( 5 )
text = "Controles
e 
Historia"
align = 1

[node name="TiempoMensaje" type="Timer" parent="."]

[connection signal="pressed" from="Control/BotonInicio" to="." method="_on_BotonInicio_pressed"]
[connection signal="pressed" from="Control/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="timeout" from="TiempoMensaje" to="." method="_on_TiempoMensaje_timeout"]
